add products and minor changes
